<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/slate_grey">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">


        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="80dp">
            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/top_options_panel"
                android:background="@drawable/grey_black_border_bottom">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="15dp"
                        android:layout_centerVertical="true"
                        android:id="@+id/menu_bars"
                        android:src="@drawable/menu_icon"/>


                    <ImageView
                        android:layout_toEndOf="@+id/menu_bars"
                        android:layout_width="wrap_content"
                        android:layout_height="100dp"
                        android:src="@drawable/classbuddies"
                        android:paddingEnd="50dp"
                        />
                </RelativeLayout>

            </android.support.v7.widget.Toolbar>


        </android.support.design.widget.AppBarLayout>

        <!-- **************About Toolbar************************* -->
        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/slate_grey">

            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:id="@+id/about_tab"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="50dp"
                        android:text="About"
                        android:textSize="25sp" />

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="20dp"
                        android:src="@drawable/classbuddies_white_circle_icon" />
                </RelativeLayout>
            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.AppBarLayout>
        <!-- **************Report Bugs Toolbar************************* -->
        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/slate_grey">

            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:id="@+id/reportbugs_tab"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="50dp"
                        android:text="Report Bugs"
                        android:textSize="25sp" />

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="20dp"
                        android:src="@drawable/bug_icon" />
                </RelativeLayout>
            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.AppBarLayout>
        <!-- **************Delete Profile Toolbar************************* -->
        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/slate_grey">

            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:id="@+id/deleteprofile_tab"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="50dp"
                        android:text="Deactivate Profile"
                        android:textSize="25sp" />

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="20dp"
                        android:src="@drawable/signout_or_deleteaccount_icon" />
                </RelativeLayout>
            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.AppBarLayout>
    </LinearLayout>

</RelativeLayout>